WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210825
REGRESSION(
r260410
) Frequent Network process crashes
https://bugs.webkit.org/show_bug.cgi?id=210825
Summary
REGRESSION(r260410) Frequent Network process crashes
Chris Dumez
Reported
2020-04-21 16:36:37 PDT
Frequent Network process crashes due to bad IPC: Received an invalid message ‘NetworkProcessProxy::DidNegotiateModernTLS’ from the Networking process.
Attachments
Patch
(8.66 KB, patch)
2020-04-21 16:47 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2020-04-21 16:47:00 PDT
Created
attachment 397140
[details]
Patch
Chris Dumez
Comment 2
2020-04-21 16:51:57 PDT
<
rdar://problem/62133579
>
EWS
Comment 3
2020-04-21 17:14:08 PDT
Committed
r260475
: <
https://trac.webkit.org/changeset/260475
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 397140
[details]
.
Ryan Haddad
Comment 4
2020-04-21 20:43:25 PDT
(In reply to EWS from
comment #3
)
> Committed
r260475
: <
https://trac.webkit.org/changeset/260475
>
The assert added with this change is causing macOS layout test and API test failures ASSERTION FAILED: m_parameters.webPageProxyID /Volumes/Data/slave/catalina-debug/build/Source/WebKit/NetworkProcess/NetworkLoad.cpp(66) : WebKit::NetworkLoad::NetworkLoad(WebKit::NetworkLoadClient &, WebCore::BlobRegistryImpl *, WebKit::NetworkLoadParameters &&, WebKit::NetworkSession &) See:
https://build.webkit.org/builders/Apple-Catalina-Debug-WK2-Tests/builds/3714
Ryan Haddad
Comment 5
2020-04-21 20:53:07 PDT
Reverted
r260475
for reason: New assert caused layout tests to exit early on iOS and macOS Committed
r260496
: <
https://trac.webkit.org/changeset/260496
>
Diego Pino
Comment 6
2020-04-22 06:22:45 PDT
Also happening in WebKitGTK+. STDERR: ASSERTION FAILED: m_parameters.webPageProxyID STDERR: ../../Source/WebKit/NetworkProcess/NetworkLoad.cpp(66) : WebKit::NetworkLoad::NetworkLoad(WebKit::NetworkLoadClient&, WebCore::BlobRegistryImpl*, WebKit::NetworkLoadParameters&&, WebKit::NetworkSession&) See:
https://build.webkit.org/builders/GTK%20Linux%2064-bit%20Debug%20%28Tests%29/builds/6181
Chris Dumez
Comment 7
2020-04-22 07:53:30 PDT
Closing since patch that caused this was reverted.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug